--- a/vite-manifest.json
+++ b/vite-manifest.json
@@ -1,14 +1,23 @@
 {
   "src/routes/+layout.css": {
-    "file": "_app/immutable/assets/_layout-1321ec73.css",
+    "file": "_app/immutable/assets/_layout-1f553581.css",
     "src": "src/routes/+layout.css"
   },
   ".svelte-kit/generated/nodes/1.js": {
-    "file": "_app/immutable/chunks/1-eb604b7f.js",
+    "file": "_app/immutable/chunks/1-e92b138f.js",
     "src": ".svelte-kit/generated/nodes/1.js",
     "isDynamicEntry": true,
     "imports": [
-      "node_modules/@sveltejs/kit/src/runtime/components/error.svelte"
+      "src/routes/+error.svelte"
+    ]
+  },
+  ".svelte-kit/generated/nodes/0.js": {
+    "file": "_app/immutable/chunks/0-46b87869.js",
+    "src": ".svelte-kit/generated/nodes/0.js",
+    "isDynamicEntry": true,
+    "imports": [
+      "__layout-da46b06b.js",
+      "src/routes/+layout.svelte"
     ]
   },
   "src/routes/+layout.ts": {
@@ -20,69 +29,52 @@
     ]
   },
   ".svelte-kit/generated/nodes/2.js": {
-    "file": "_app/immutable/chunks/2-ff982b2b.js",
+    "file": "_app/immutable/chunks/2-eea45ba3.js",
     "src": ".svelte-kit/generated/nodes/2.js",
     "isDynamicEntry": true,
     "imports": [
       "src/routes/+page.svelte"
     ]
   },
-  ".svelte-kit/generated/nodes/0.js": {
-    "file": "_app/immutable/chunks/0-7e768938.js",
-    "src": ".svelte-kit/generated/nodes/0.js",
-    "isDynamicEntry": true,
-    "imports": [
-      "__layout-da46b06b.js",
-      "src/routes/+layout.svelte"
-    ]
-  },
   "__layout-da46b06b.js": {
     "file": "_app/immutable/chunks/_layout-da46b06b.js"
   },
-  "src/routes/+page.svelte": {
-    "file": "_app/immutable/components/pages/_page.svelte-84041f18.js",
-    "src": "src/routes/+page.svelte",
+  "src/routes/+error.svelte": {
+    "file": "_app/immutable/components/pages/_error.svelte-8f592ca3.js",
+    "src": "src/routes/+error.svelte",
     "isEntry": true,
     "imports": [
-      "_index-7f3551f2.js"
+      "_index-3d8551fe.js"
     ]
   },
-  "node_modules/@sveltejs/kit/src/runtime/components/error.svelte": {
-    "file": "_app/immutable/components/error.svelte-03b3ffcb.js",
-    "src": "node_modules/@sveltejs/kit/src/runtime/components/error.svelte",
-    "isEntry": true,
-    "imports": [
-      "_index-7f3551f2.js",
-      "_singletons-c1916556.js"
-    ]
+  "_index-3d8551fe.js": {
+    "file": "_app/immutable/chunks/index-3d8551fe.js"
   },
   "src/routes/+layout.svelte": {
-    "file": "_app/immutable/components/pages/_layout.svelte-8fdad4a4.js",
+    "file": "_app/immutable/components/pages/_layout.svelte-5058222d.js",
     "src": "src/routes/+layout.svelte",
     "isEntry": true,
     "imports": [
-      "_index-7f3551f2.js"
+      "_index-3d8551fe.js"
     ],
     "css": [
-      "_app/immutable/assets/_layout-1321ec73.css"
+      "_app/immutable/assets/_layout-1f553581.css"
     ]
   },
-  "_singletons-c1916556.js": {
-    "file": "_app/immutable/chunks/singletons-c1916556.js",
+  "src/routes/+page.svelte": {
+    "file": "_app/immutable/components/pages/_page.svelte-7f855b6e.js",
+    "src": "src/routes/+page.svelte",
+    "isEntry": true,
     "imports": [
-      "_index-7f3551f2.js"
+      "_index-3d8551fe.js"
     ]
-  },
-  "_index-7f3551f2.js": {
-    "file": "_app/immutable/chunks/index-7f3551f2.js"
   },
   "node_modules/@sveltejs/kit/src/runtime/client/start.js": {
-    "file": "_app/immutable/start-817dfb80.js",
+    "file": "_app/immutable/start-05e02975.js",
     "src": "node_modules/@sveltejs/kit/src/runtime/client/start.js",
     "isEntry": true,
     "imports": [
-      "_index-7f3551f2.js",
-      "_singletons-c1916556.js"
+      "_index-3d8551fe.js"
     ],
     "dynamicImports": [
       ".svelte-kit/generated/nodes/0.js",
