--- a/package.json
+++ b/package.json
@@ -4,36 +4,33 @@
 	"private": true,
 	"scripts": {
 		"dev": "vite dev",
-		"build": "rm -rf build && vite build && touch build/.nojekyll",
+		"build": "vite build",
+		"postbuild": "npx svelte-sitemap --domain https://euandeas.com",
 		"deploy": "npm run build && npx gh-pages -d build -t true",
 		"preview": "vite preview",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --plugin-search-dir . --check . && eslint .",
-		"format": "prettier --plugin-search-dir . --write .",
-		"postbuild": "npx svelte-sitemap --domain https://euandeas.com"
+		"format": "prettier --plugin-search-dir . --write ."
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-static": "^1.0.0",
-		"@sveltejs/kit": "^1.0.0",
+		"@sveltejs/adapter-auto": "^2.0.0",
+		"@sveltejs/kit": "^1.20.4",
 		"@typescript-eslint/eslint-plugin": "^5.45.0",
 		"@typescript-eslint/parser": "^5.45.0",
-		"autoprefixer": "^10.4.13",
+		"autoprefixer": "^10.4.14",
 		"eslint": "^8.28.0",
 		"eslint-config-prettier": "^8.5.0",
-		"eslint-plugin-svelte3": "^4.0.0",
-		"gh-pages": "^4.0.0",
-		"mdsvex": "^0.10.6",
-		"postcss": "^8.4.20",
+		"eslint-plugin-svelte": "^2.30.0",
+		"postcss": "^8.4.27",
 		"prettier": "^2.8.0",
-		"prettier-plugin-svelte": "^2.8.1",
-		"svelte": "^3.54.0",
-		"svelte-check": "^2.9.2",
-		"svelte-sitemap": "^2.5.4",
-		"tailwindcss": "^3.2.4",
+		"prettier-plugin-svelte": "^2.10.1",
+		"svelte": "^4.0.5",
+		"svelte-check": "^3.4.3",
+		"tailwindcss": "^3.3.3",
 		"tslib": "^2.4.1",
-		"typescript": "^4.9.3",
-		"vite": "^4.0.0"
+		"typescript": "^5.0.0",
+		"vite": "^4.4.2"
 	},
 	"type": "module"
 }
